--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,9 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <div class="touch">
+
+    </div>
 
     <canvas class="snake">
 
@@ -30,8 +33,8 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="/bower_components/hammerjs/hammer.js"></script>
     <!-- endbower -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.6/hammer.min.js"></script> -->
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
