--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,10 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <div class="header">
+      <input type="text" maxlength="8" placeholder="name" class="username">
+      <a href="leaderboard.html" target="leaderboard">Leaderboard</a>
+    </div>
     <div class="touch">
 
     </div>
@@ -33,6 +37,8 @@
 
     </canvas>
 
+    <p>USE KEYS OR SWIPE</p>
+    <p>SPACE OR DOUBLE TAP TO RESTART</p>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -48,8 +54,12 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/hammerjs/hammer.js"></script>
+    <script src="/bower_components/hammer-time/hammer-time.js"></script>
+    <script src="/bower_components/js-cookie/src/js.cookie.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
