--- a/app/leaderboard.html
+++ b/app/leaderboard.html
@@ -22,7 +22,7 @@
   <!-- endbuild -->
 
   <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
-  <!-- build:js scripts/main.js -->
+  <!-- build:js scripts/leaderboard.js -->
   <script src="scripts/leaderboard.js"></script>
   <!-- endbuild -->
 </body>
