--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div class="header">
+      SNAKE
       <input type="text" maxlength="8" placeholder="name" class="username">
       <a href="leaderboard.html" target="leaderboard">Leaderboard</a>
     </div>
@@ -37,6 +38,7 @@
 
     <p>USE KEYS OR SWIPE</p>
     <p>SPACE OR DOUBLE TAP TO RESTART</p>
+    <p><a href="https://twitter.com/phelmphelm">@phelmphelm</a></p>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
