--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,15 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-43882047-4', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -37,18 +46,8 @@
     </canvas>
     <p>SET YOUR NAME AT THE TOP</p>
     <p>SWIPE OR USE ARROW KEYS TO TURN</p>
-    <p>SPACE OR DOUBLE TAP TO RESTART</p>
+    <p>TAP TWICE OR PRESS SPACE TO RESTART</p>
     <p><a href="https://twitter.com/phelmphelm">@phelmphelm</a></p>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-43882047-4', 'auto');
-      ga('send', 'pageview');
-    </script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
