single tap to restart

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
     </canvas>
     <p>SET YOUR NAME AT THE TOP</p>
     <p>SWIPE OR USE ARROW KEYS TO TURN</p>
-    <p>TAP TWICE OR PRESS SPACE TO RESTART</p>
+    <p>TAP OR PRESS SPACE TO RESTART</p>
     <p><a href="https://twitter.com/phelmphelm">@phelmphelm</a></p>
 
     <!-- build:js scripts/vendor.js -->
